deployment/zitadel/ingressRoute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: zitadel-server
  annotations:
    argocd.argoproj.io/hook: PostSync
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`zitadel.varghacsongor.hu`)
      priority: 10
      services:
        - name: zitadel
          port: 8080
          passHostHeader: true
    - kind: Rule
      match: Host(`zitadel.varghacsongor.hu`) && Headers(`Content-Type`, `application/grpc`)
      priority: 11
      services:
        - name: zitadel
          port: 8080
          scheme: h2c
          passHostHeader: true
  tls: {}
